--- a/package.json
+++ b/package.json
@@ -11,12 +11,21 @@
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
+    "precommit": "lint-staged",
     "start": "react-scripts start",
     "flow": "flow",
     "test": "react-scripts test --env=jsdom"
   },
   "devDependencies": {
     "cypress": "^3.0.2",
-    "prettier": "1.13.7"
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
+    "prettier": "^1.13.7"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
   }
 }
