--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^1.4.0",
     "@material-ui/icons": "^1.1.0",
+    "axios": "^0.18.0",
     "flow-bin": "^0.76.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
