--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "react-scripts start",
     "flow": "flow",
     "test": "react-scripts test --env=jsdom",
-    "storybook": "start-storybook -p 9009 -s public",
+    "storybook": "start-storybook -p 9009 -s public -c .storybook",
     "build-storybook": "build-storybook -s public"
   },
   "devDependencies": {
